# neo-passes-rs

./: ASSETS.md  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  github-release.yml  py-release.yml  release.yaml  rust-release.yaml
examples/: test.py
examples/pass-generator/: Cargo.toml
examples/pass-generator-dal/: Cargo.toml
examples/pass-generator-dal/src/: main.rs
examples/pass-generator/src/: main.rs
src/: error.rs  lib.rs  package.rs  pass.rs  python_bindings.rs
src/package/: manifest.rs  resource.rs  sign.rs
src/pass/: date_format.rs  visual_appearance.rs
