[package]
name = "neopasses"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "2.0.0-alpha1"
edition = "2024"
authors = [
    "Mark Vodyanitskiy <mvodya@icloud.com>",
    "Jstyles <jstyles@styl.dev>",
]
license = "MIT"
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]
keywords = ["passkit", "wallet", "apple"]
categories = ["parsing"]
documentation = "https://docs.rs/neopasses/latest/v/"
repository = "https://github.com/jontyms/neo-passes-rs"

[profile.dev] # or profile.release if you only hit it in release
opt-level = 0
debug = 2

[workspace]
members = ["examples/pass-generator", "examples/pass-generator-dal"]


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
chrono = "0.4.41"
hex = "0.4.3"
is_empty = "0.2.0"
openssl = { version = "0.10.72", features = ["vendored"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"

[dependencies.pyo3]
version = "0.24.2"
features = ["extension-module"] # "macros" is on by default


[package.metadata.maturin]
name = "passes_rs_py"
