[package]
name = "neopasses"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "3.0.1"
edition = "2024"
authors = [
    "Jstyles <jstyles@styl.dev>",
]
license = "MIT"
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]
keywords = ["passkit", "wallet", "apple"]
categories = ["parsing"]
documentation = "https://docs.rs/neopasses/latest/v/"
repository = "https://github.com/jontyms/neo-passes-rs"

[profile.dev] # or profile.release if you only hit it in release
opt-level = 0
debug = 2

[workspace]
members = ["examples/pass-generator", "examples/pass-generator-dal"]


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
chrono = "0.4.41"
hex = "0.4.3"
is_empty = "0.3.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "4.3.0"
cms = { version = "0.2.3", features = ["builder"] }
rsa = { version = "0.9.8", features = ["sha2"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.12"

[dependencies.pyo3]
version = "0.27.0"
features = ["extension-module"]

[dev-dependencies]
rcgen = "0.12"
openssl = { version = "0.10.64", features = ["vendored"] }

[package.metadata.maturin]
name = "passes_rs_py"
